RESOLVED FIXED135712
Fixed backgrounds don't paint in blurred inset areas
https://bugs.webkit.org/show_bug.cgi?id=135712
Summary Fixed backgrounds don't paint in blurred inset areas
Beth Dakin
Reported 2014-08-07 13:09:53 PDT
Background images that are background-attachment:fixed fail to paint in blurred inset areas. <rdar://problem/17848141>
Attachments
For review (1.88 KB, patch)
2014-08-07 13:17 PDT, Beth Dakin
no flags
Patch with test (11.07 KB, patch)
2014-08-07 14:34 PDT, Beth Dakin
no flags
Patch (20.89 KB, patch)
2014-08-07 15:12 PDT, Beth Dakin
simon.fraser: review+
Patch (25.71 KB, patch)
2014-08-11 15:44 PDT, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2014-08-07 13:17:31 PDT
Created attachment 236213 [details] For review
Beth Dakin
Comment 2 2014-08-07 14:34:32 PDT
Created attachment 236225 [details] Patch with test
Beth Dakin
Comment 3 2014-08-07 15:12:47 PDT
Created attachment 236233 [details] Patch The previous test did not work in wk2. Here's a new patch.
Beth Dakin
Comment 4 2014-08-07 15:25:50 PDT
WebKit Commit Bot
Comment 5 2014-08-07 23:37:39 PDT
Re-opened since this is blocked by bug 135748
Tim Horton
Comment 6 2014-08-07 23:45:59 PDT
With this patch, background-attachment: fixed on <body> with top content inset applied in WebKit2 ends up with a weird, large band of color at the top.
Beth Dakin
Comment 7 2014-08-11 15:44:13 PDT
Beth Dakin
Comment 8 2014-08-11 15:45:30 PDT
This patch fixes the regression caused by the original patch and adds an additional test to confirm that.
Beth Dakin
Comment 9 2014-08-11 16:04:20 PDT
Note You need to log in before you can comment on or make changes to this bug.