Fixed backgrounds don't paint in blurred inset areas https://bugs.webkit.org/show_bug.cgi?id=135712

Reviewed by Simon Fraser.

Source/WebCore:

Background geometry calculations for fixed background need to use the larger
visible rect.

The first version of this patch caused a regression because it universally
adjusted the value for top to account for the inset whether or not the
viewportRect location was adjusted for the same. This version fixes that — those
two changes go hand-in-hand.
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::calculateBackgroundImageGeometry):

LayoutTests:

* platform/mac-wk1/TestExpectations:
* platform/mac-wk1/fast: Added.
* platform/mac-wk1/fast/backgrounds: Added.
* platform/mac-wk1/fast/backgrounds/resources: Added.
* platform/mac-wk1/fast/backgrounds/resources/green.png: Added.
* platform/mac-wk1/fast/backgrounds/top-content-inset-fixed-attachment-expected.html: Added.
* platform/mac-wk1/fast/backgrounds/top-content-inset-fixed-attachment.html: Added.
* platform/mac-wk2/tiled-drawing/resources/green-blue.png: Added.
* platform/mac-wk2/tiled-drawing/resources/green.png: Added.
* platform/mac-wk2/tiled-drawing/top-content-inset-fixed-attachment-body-expected.html: Added.
* platform/mac-wk2/tiled-drawing/top-content-inset-fixed-attachment-body.html: Added.
* platform/mac-wk2/tiled-drawing/top-content-inset-fixed-attachment-expected.html: Added.
* platform/mac-wk2/tiled-drawing/top-content-inset-fixed-attachment.html: Added.



Canonical link: https://commits.webkit.org/153693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172417 268f45cc-cd09-0410-ab3c-d52691b4dbfc